[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-control-panel"
version = "0.1.0"
description = "A text-based home control panel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytz==2025.2",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "textual==6.5.0",
    "textual-hires-canvas==0.14.0",
]

[project.optional-dependencies]
dev = [
    "textual-dev==1.8.0",
]

[project.scripts]
home-panel = "home_control_panel.app:main"

[tool.setuptools.packages.find]
where = ["src"]
